--- a/guides.html
+++ b/guides.html
@@ -13,13 +13,11 @@
         <h1>THE VAULT OF ENDURIEL</h1>
         <nav>
             <ul>
+                <li><a href="index.html">HOME</a></li>
                 <li>
                     <a href="#">WORLD OF WARCRAFT RP</a>
                     <ul class="dropdown">
-                        <li><a href="#">CHARACTERS</a></li>
-                        <li><a href="#">PHASES</a></li>
-                        <li><a href="#">CUSTOM ITEMS</a></li>
-                        <li><a href="#">CUSTOM BOOKS</a></li>
+                        <li><a href="custom-items.html">CUSTOM BOOKS</a></li>
                         <li><a href="guides.html">GUIDES</a></li>
                     </ul>
                 </li>
@@ -31,7 +29,6 @@
     <main>
         <section>
             <h1>TRP 3 CUSTOMIZATION</h1>
-                <h3>Getting Started</h3>
                     <p>
                         To apply <strong>custom colors</strong> and <strong>icons</strong> in areas that Total RP 3 doesn't allow us to officially customize through the in-game UI, we'll need to edit the <code>totalRP3.lua</code> file directly.
                     </p>
@@ -45,12 +42,11 @@
                             <li><a href="https://atom-editor.cc/">Atom</a></li>
                         </ul>
 
-                <h3>Custom Colors and Icons</h3>
                     <figure class="step-image">
                         <img src="images/ex_therm.jpg" alt="Example">
                         <figcaption>Colored title, race, currently and ooc. Icon next to race.</figcaption>
                     </figure>
-
+                    <br>
                     <h4>Locating the <code>totalRP3.lua</code> File:</h4>
                         <ol>
                             <li>Navigate to the following folder:<br>
@@ -108,7 +104,7 @@
                     <br>
                     <h4>EDITING THE CODE</h4>
                     <p>I will now use <strong>CTRL+F</strong> to search for my characters name within the <code>.lua</code> file.</p>
-                    <figure class="step-image">
+                    <figure class="step-image-code-2">
                         <img src="images/code_therm.png" alt="Example">
                         <figcaption></figcaption>
                     </figure>
