--- a/index.html
+++ b/index.html
@@ -16,10 +16,7 @@
                 <li>
                     <a href="#">WORLD OF WARCRAFT RP</a>
                     <ul class="dropdown">
-                        <li><a href="#">CHARACTERS</a></li>
-                        <li><a href="#">PHASES</a></li>
-                        <li><a href="#">CUSTOM ITEMS</a></li>
-                        <li><a href="#">CUSTOM BOOKS</a></li>
+                        <li><a href="custom-items.html">CUSTOM BOOKS</a></li>
                         <li><a href="guides.html">GUIDES</a></li>
                     </ul>
                 </li>
