--- a/custom-items.html
+++ b/custom-items.html
@@ -87,8 +87,8 @@
                             <span class="item-name">THE CODEX OF SEVERANCE</span>
                         </button>
                         <div class="item-details">
-                            <p class="item-description">A golden ring inscribed with abyssal runes and arcane symbols. Boosts the wearers control over demons, increasing the potency of demonic magic and providing resistance to corruption effects from fel energy.</p>
-                            <p class="item-obtained-from">Obtained from Aryssa Bel'Athil.</p>
+                            <p class="item-description">...</p>
+                            <p class="item-obtained-from">...</p>
                         </div>
                     </div>
                 </div>
@@ -100,8 +100,8 @@
                             <span class="item-name">SILK OF THE DEEP WARRENS</span>
                         </button>
                         <div class="item-details">
-                            <p class="item-description">This silver ring is inscribed with runes that continuously leak shadow energy. Increases the wearers resistance to curses and hexes while amplifying their power when they draw upon shadow magic, though it comes with a slight risk of dark influence over time.</p>
-                            <p class="item-obtained-from">Obtained from Aryssa Bel'Athil.</p>
+                            <p class="item-description">...</p>
+                            <p class="item-obtained-from">...</p>
                         </div>
                     </div>
                 </div>
