--- a/custom-items.html
+++ b/custom-items.html
@@ -87,8 +87,8 @@
                             <span class="item-name">THE CODEX OF SEVERANCE</span>
                         </button>
                         <div class="item-details">
-                            <p class="item-description">...</p>
-                            <p class="item-obtained-from">...</p>
+                            <p class="item-description">A heavily warded grimoire detailing the means by which warlocks can sever demonic entities from the Twisting Nether—binding them permanently to Azeroth or, alternatively, unraveling them entirely. It contains fragmented accounts of warlocks who sought to unmake their own demons, and the catastrophic consequences of their attempts.</p>
+                            <p class="item-obtained-from">Author unknown.</p>
                         </div>
                     </div>
                 </div>
@@ -100,8 +100,8 @@
                             <span class="item-name">SILK OF THE DEEP WARRENS</span>
                         </button>
                         <div class="item-details">
-                            <p class="item-description">...</p>
-                            <p class="item-obtained-from">...</p>
+                            <p class="item-description">A rare Nerubian text woven—rather than enchanted strands of silk, its patterns shifting in response to the reader’s thoughts. It documents the properties of Nerubian silk, from its use in shadow magic-infused armor to the creation of webs that can ensnare minds as easily as bodies. Some passages hint at an almost sentient quality to the oldest, most refined strands, whispering secrets to those who dare to listen.</p>
+                            <p class="item-obtained-from">Author unknown.</p>
                         </div>
                     </div>
                 </div>
@@ -113,8 +113,8 @@
                             <span class="item-name">THE TABLET OF D'ZUN'KA</span>
                         </button>
                         <div class="item-details">
-                            <p class="item-description">...</p>
-                            <p class="item-obtained-from">...</p>
+                            <p class="item-description">A relic of ancient Sandfury origin, sealed within a crypt below Zul’Farrak. Etched in fading Zandali and humming when touched by fel or void, it is rumored to house a mental safeguard—used to resist madness during communion with dark Loa.</p>
+                            <p class="item-obtained-from">Author unknown.</p>
                         </div>
                     </div>
                 </div>
@@ -126,8 +126,8 @@
                             <span class="item-name">THE EBON LOOM</span>
                         </button>
                         <div class="item-details">
-                            <p class="item-description">...</p>
-                            <p class="item-obtained-from">...</p>
+                            <p class="item-description">A chilling volume detailing the intersection of necromancy and weaving, theorizing how enchanted threads could be infused with death magic to create self-mending garments, spectral bindings, and burial shrouds that retain the memories of the dead. Scattered notes suggest its origins in forgotten Amani rituals, though some sections bear Scourge-style necromantic annotations.</p>
+                            <p class="item-obtained-from">Author unknown.</p>
                         </div>
                     </div>
                 </div>
@@ -139,8 +139,8 @@
                             <span class="item-name">THE UMBRAL LEXICON</span>
                         </button>
                         <div class="item-details">
-                            <p class="item-description">...</p>
-                            <p class="item-obtained-from">...</p>
+                            <p class="item-description">A cryptic volume bound in blackened leather, its pages seem to darken and blur in low light. The text, penned in shifting script, describes the nature of shadow as both a weapon and a veil. It details methods to merge shadow magic with traditional spellwork, including techniques for bending light, nullifying arcane resonance, and weaving illusions that bleed into reality.</p>
+                            <p class="item-obtained-from">Author unknown.</p>
                         </div>
                     </div>
                 </div>
@@ -152,8 +152,8 @@
                             <span class="item-name">THE GRIMOIRE OF SILENT TONGUES</span>
                         </button>
                         <div class="item-details">
-                            <p class="item-description">...</p>
-                            <p class="item-obtained-from">...</p>
+                            <p class="item-description">A forbidden manuscript chronicling the rituals used to subjugate greater demons. It describes the theory of layered bindings, where multiple sigils intertwine to create an inescapable prison, but warns of the arrogance that often leads summoners to believe their chains are unbreakable. Scorched pages and hastily scribbled warnings suggest its previous owner may have learned this lesson too late.</p>
+                            <p class="item-obtained-from">Author unknown.</p>
                         </div>
                     </div>
                 </div>
@@ -165,8 +165,8 @@
                             <span class="item-name">THE TOME OF OBSIDIAN LORDS</span>
                         </button>
                         <div class="item-details">
-                            <p class="item-description">...</p>
-                            <p class="item-obtained-from">...</p>
+                            <p class="item-description">Bound in obsidian-black stone plates, this tome is surprisingly heavy, its cover etched with golden filigree resembling ancient mogu war sigils. The pages, made of an unk nown flexible stone-paper, are engraved with meticulously inscribed High Mogu script. The book is reputedly written by the last of the Obsidian Lords, a secretive sect of mogu who sought to perfect arcane enhancement techniques through metallurgy and gem stone manipulation. The pages contain deeply complex formulas, blueprints, and experimental notes—some unfinished—on how to imbue weapons, armor, and regalia with the durability of mountains and the terrifying resilience of mogu warlords.</p>
+                            <p class="item-obtained-from">Author unknown.</p>
                         </div>
                     </div>
                 </div>
