--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <h1>THE VAULT OF ENDURIEL</h1>
         <nav>
             <ul>
+                <li><a href="index.html">HOME</a></li>
                 <li>
                     <a href="#">WORLD OF WARCRAFT RP</a>
                     <ul class="dropdown">
