--- a/custom-items.html
+++ b/custom-items.html
@@ -74,8 +74,29 @@
                             </ul>
                             <p>Steps:</p>
                             <ul>
-                                <ol>Draw a resonance loop on the surface of the item.</ol>
+                                <ol>1. Draw a resonance loop on the surface of the item.</ol>
+                                <ol>2. Speak the old phrase: <b>“Thalas’ara amanor.”</b></ol>
+                                <ol>3. Release essence <b>into</b> the object, not <b>through</b> it.</ol>
                             </ul>
+                            <p>If successful, the fabric will feel “aware”—not sentient, but awake.</p>
+
+                            <h4>IV. On Glyphs, Wards, and Failures</h4>
+                            <p>The Mark of Warding is stable and ancient. It predates the Kirin Tor and was used in Highborne arcanowoven standards. Its shape has not changed in centuries. That is why it works.</p>
+                            <p>Glyph of Lesser Avoidance should never be inscribed on leather. It splinters the weave. The magic tries to “breathe” but the material forgets how. The result is twitchy armor and unpleasant dreams.</p>
+                            <p>Stacking Fortitude and Haste bindings requires a thread buffer. Without it, the enchantments conflict—one seeks endurance, the other acceleration. The object will fracture under layered command. If it survives, its wearer rarely does.</p>
+                            <p>The Rune of Echoed Flame should not be used on garments intended for ritual work. It draws residual heat from old spells—often from <i>other</i> casters. Unless you like surprises.</p>
+                            <p>Seal of Twin Foci may be used to bind two enchantments in harmony, <i>if</i> both spells are from the same school. Mixing arcane and shadow results in static feedback and memory loss. (See: Gloves of Thaelis the Forgetful.)</p>
+                            <p>Never attempt to stabilize Sigils of Retention on silk thread alone. They stretch. Silk remembers—<i>but it lies</i>.</p>
+                            <p>The Chisel Rune of Resurgence, when engraved into metals, must never be paired with self-repair enchantments. The object may attempt to regrow even after complete destruction. This includes, in one case, <i>teeth.</i></p>
+                            <p>Glyph of Directional Intent is often misunderstood. It channels energy forward—but "forward" is relative to the object, not the wearer. Use only if you enjoy being flung backward.</p>
+                            <p>The Amani Spiral of Dread Binding is <i>not</i> a decorative motif. It was designed to suppress necromantic spirits within burial wrappings. When used improperly, it may instead draw them <i>in</i>.</p>
+                            <p>The Twilight Knot cannot be undone once woven. There is no counterspell. Use it only when you are certain—and even then, question your certainty twice.</p>
+                            
+                            <h4>V. Closing Thoughts</h4>
+                            <p>You do not command enchantments. You <b>invite</b> them. Each spell you bind is a story the object must be willing to carry.</p>
+                            <p>If you are seeking shortcuts, return this tome to its shelf.</p>
+                            <p>If you are ready to listen—to the thread, to the echo, to the tension—</p>
+                            <p>—then continue.</p>
                         </div>
                     </div>
                 </div>
