--- a/guides.html
+++ b/guides.html
@@ -28,7 +28,17 @@
     <!-- Main Content Area -->
     <main>
         <section>
-            <h1>TRP 3 CUSTOMIZATION</h1>
+            <div class="decorated-h1">
+                <div class="flourish-left">
+                    <span class="flourish-line-left"></span>
+                    <span class="flourish-box"></span>
+                </div>
+                    <h1>TRP 3 CUSTOMIZATION</h1>
+                <div class="flourish-right">
+                    <span class="flourish-box"></span>
+                    <span class="flourish-line-right"></span>
+                </div>
+            </div>
                     <p>
                         To apply <strong>custom colors</strong> and <strong>icons</strong> in areas that Total RP 3 doesn't allow us to officially customize through the in-game UI, we'll need to edit the <code>totalRP3.lua</code> file directly.
                     </p>
@@ -143,8 +153,6 @@
                             For this reason, it's best to apply your formatting only after your profile content is finalized. Otherwise, you'll end up having to repeat the process every time you make edits.
                         </p>
                     </div>
-                <h3>ABOUT SECTION</h3>
-                <p>Coming Soon</p>
         </section>
     </main>
 
