--- a/custom-items.html
+++ b/custom-items.html
@@ -53,7 +53,7 @@
                 <button class="filter-btn" data-category="mogu">MOGU & PANDAREN</button>
                 <!-- Add more buttons for other categories as needed -->
             </div>
-            
+            <p>I am still writing the books so most of these only contain the item description at the moment.</p>
             <!-- <div class="divider">
                 <span class="diamond"></span>
                 <span class="line"></span>
