--- a/custom-items.html
+++ b/custom-items.html
@@ -17,10 +17,14 @@
                 <li>
                     <a href="#">WORLD OF WARCRAFT RP</a>
                     <ul class="dropdown">
+                        <li><a href="characters.html">MY CHARACTERS</a></li>
                         <li><a href="custom-items.html">CUSTOM BOOKS</a></li>
                         <li><a href="guides.html">GUIDES</a></li>
                     </ul>
                 </li>
+                <li><a href="#">FANTASY PROJECTS</a></li>
+                <li><a href="#">MUSIC</a></li>
+                <li><a href="#">RESOURCES</a></li>
             </ul>
         </nav>
     </header>
@@ -66,15 +70,21 @@
                     <div class="item-info">
                         <button class="item-toggle">
                             <img src="images/elven_book_01.png" alt="icon" class="item-icon">
-                            <span class="item-name">WARDS AND WEAVES: A PRACTICAL GUIDE ON ARCANE ENCHANTING</span>
+                            <span class="item-text">
+                                <span class="item-name">WARDS AND WEAVES: A PRACTICAL GUIDE ON ARCANE ENCHANTING</span>
+                                <span class="item-subname">ENCHANTING - ARYSSA BEL'ATHIL</span>
+                            </span>
                         </button>
                         <div class="item-details">
                             <p class="item-description"></p>
-                            <p class="item-obtained-from">Written by Aryssa Bel'Athil</p>
-                            <h4>I. Introduction: On the Act of Binding</h4>
+                            <p class="item-obtained-from"></p>
+
+                            <h4>I. Introduction: On the Act of Binding</h4>                            
+                            <span class="divider"></span>
                             <p> Enchanting is not an art of impulse. It is an act of memory—<b>the memory of magic</b>, placed into material form.</p>
                             <p>In Quel’Thalas, we wove spells into silk banners and regalia long before the arcane was taught beyond the spires. In Dalaran, enchantments were reduced to recipes. Both methods lack discipline. This guide favors the former: <b>controlled, intention-based enchantment</b>, passed through proper channels of resonance and medium.</p>
                             <h4>II. Materials and Their Magical Affinities</h4>
+                            <span class="divider"></span>
                             <p>Every substance has a <b>magical sympathy</b>, and enchanting is the negotiation of those tendencies.</p>
                             <ul>
                                 <li><b>Arkhana</b>: Common in lesser enchantments; ideal for learning.</li>
@@ -84,6 +94,7 @@
                             </ul>
                             <p><b><i>Note</i></b>: Items must be cleansed of fel traces. Even mild taint can cause echoing dissonance in bindings.</p>
                             <h4>III. The First Enchantment: Minor Intellect (Classic)</h4>
+                            <span class="divider"></span>
                             <p>The simplest enchantment still used today: <b>Enchantment: Minor Intellect</b>. Once favored by apprentice magi and Silvermoon initiates.</p>
                             <ul>
                                 <li>Material: Simple robe or linen cowl </li>
@@ -99,18 +110,20 @@
                             <p>If successful, the fabric will feel “aware”—not sentient, but awake.</p>
 
                             <h4>IV. On Glyphs, Wards, and Failures</h4>
-                            <p>The Mark of Warding is stable and ancient. It predates the Kirin Tor and was used in Highborne arcanowoven standards. Its shape has not changed in centuries. That is why it works.</p>
-                            <p>Glyph of Lesser Avoidance should never be inscribed on leather. It splinters the weave. The magic tries to “breathe” but the material forgets how. The result is twitchy armor and unpleasant dreams.</p>
+                            <span class="divider"></span>
+                            <p><b>The Mark of Warding</b> is stable and ancient. It predates the Kirin Tor and was used in Highborne arcanowoven standards. Its shape has not changed in centuries. That is why it works.</p>
+                            <p><b>Glyph of Lesser Avoidance</b> should never be inscribed on leather. It splinters the weave. The magic tries to “breathe” but the material forgets how. The result is twitchy armor and unpleasant dreams.</p>
                             <p>Stacking Fortitude and Haste bindings requires a thread buffer. Without it, the enchantments conflict—one seeks endurance, the other acceleration. The object will fracture under layered command. If it survives, its wearer rarely does.</p>
-                            <p>The Rune of Echoed Flame should not be used on garments intended for ritual work. It draws residual heat from old spells—often from <i>other</i> casters. Unless you like surprises.</p>
-                            <p>Seal of Twin Foci may be used to bind two enchantments in harmony, <i>if</i> both spells are from the same school. Mixing arcane and shadow results in static feedback and memory loss. (See: Gloves of Thaelis the Forgetful.)</p>
-                            <p>Never attempt to stabilize Sigils of Retention on silk thread alone. They stretch. Silk remembers—<i>but it lies</i>.</p>
-                            <p>The Chisel Rune of Resurgence, when engraved into metals, must never be paired with self-repair enchantments. The object may attempt to regrow even after complete destruction. This includes, in one case, <i>teeth.</i></p>
-                            <p>Glyph of Directional Intent is often misunderstood. It channels energy forward—but "forward" is relative to the object, not the wearer. Use only if you enjoy being flung backward.</p>
-                            <p>The Amani Spiral of Dread Binding is <i>not</i> a decorative motif. It was designed to suppress necromantic spirits within burial wrappings. When used improperly, it may instead draw them <i>in</i>.</p>
-                            <p>The Twilight Knot cannot be undone once woven. There is no counterspell. Use it only when you are certain—and even then, question your certainty twice.</p>
+                            <p><b>The Rune of Echoed Flame</b> should not be used on garments intended for ritual work. It draws residual heat from old spells—often from <i>other</i> casters. Unless you like surprises.</p>
+                            <p><b>Seal of Twin Foci</b> may be used to bind two enchantments in harmony, <i>if</i> both spells are from the same school. Mixing arcane and shadow results in static feedback and memory loss. (See: Gloves of Thaelis the Forgetful.)</p>
+                            <p>Never attempt to stabilize <b>Sigils of Retention</b> on silk thread alone. They stretch. Silk remembers—<i>but it lies</i>.</p>
+                            <p><b>The Chisel Rune of Resurgence</b>, when engraved into metals, must never be paired with self-repair enchantments. The object may attempt to regrow even after complete destruction. This includes, in one case, <i>teeth.</i></p>
+                            <p><b>Glyph of Directional Intent</b> is often misunderstood. It channels energy forward—but "forward" is relative to the object, not the wearer. Use only if you enjoy being flung backward.</p>
+                            <p><b>The Amani Spiral of Dread Binding</b> is <i>not</i> a decorative motif. It was designed to suppress necromantic spirits within burial wrappings. When used improperly, it may instead draw them <i>in</i>.</p>
+                            <p><b>The Twilight Knot</b> cannot be undone once woven. There is no counterspell. Use it only when you are certain—and even then, question your certainty twice.</p>
                             
                             <h4>V. Closing Thoughts</h4>
+                            <span class="divider"></span>
                             <p>You do not command enchantments. You <b>invite</b> them. Each spell you bind is a story the object must be willing to carry.</p>
                             <p>If you are seeking shortcuts, return this tome to its shelf.</p>
                             <p>If you are ready to listen—to the thread, to the echo, to the tension—</p>
@@ -123,11 +136,14 @@
                     <div class="item-info">
                         <button class="item-toggle">
                             <img src="images/demon_book_01.png" alt="icon" class="item-icon">
-                            <span class="item-name">THE CODEX OF SEVERANCE</span>
+                            <span class="item-text">
+                                <span class="item-name">THE CODEX OF SEVERANCE</span>
+                                <span class="item-subname">BINDING RITUALS - MULTIPLE AUTHORS</span>
+                            </span>
                         </button>
                         <div class="item-details">
                             <p class="item-description">A heavily warded grimoire detailing the means by which warlocks can sever demonic entities from the Twisting Nether—binding them permanently to Azeroth or, alternatively, unraveling them entirely. It contains fragmented accounts of warlocks who sought to unmake their own demons, and the catastrophic consequences of their attempts.</p>
-                            <p class="item-obtained-from">Author unknown.</p>
+                            <p class="item-obtained-from"></p>
                         </div>
                     </div>
                 </div>
@@ -136,13 +152,16 @@
                     <div class="item-info">
                         <button class="item-toggle">
                             <img src="images/nerubian_book_01.png" alt="icon" class="item-icon">
-                            <span class="item-name">SILK OF THE DEEP WARRENS</span>
+                            <span class="item-text">
+                                <span class="item-name">SILK OF THE DEEP WARRENS</span>
+                                <span class="item-subname">ANCIENT KNOWLEDGE - UNKNOWN</span>
+                            </span>
                         </button>
                         <div class="item-details">
                             <p class="item-description">
                                 A rare Nerubian text woven—rather than written—from enchanted strands of silk, its patterns shifting in response to the reader’s thoughts. It documents the properties of Nerubian silk, from its use in shadow magic-infused armor to the creation of webs that can ensnare minds as easily as bodies. Some passages hint at an almost sentient quality to the oldest, most refined strands, whispering secrets to those who dare to listen.
                             </p>
-                            <p class="item-obtained-from">Author unknown.</p>
+                            <p class="item-obtained-from"></p>
                         </div>
                     </div>
                 </div>
@@ -151,11 +170,14 @@
                     <div class="item-info">
                         <button class="item-toggle">
                             <img src="images/zandali_tablet.png" alt="icon" class="item-icon">
-                            <span class="item-name">THE TABLET OF D'ZUN'KA</span>
+                            <span class="item-text">
+                                <span class="item-name">THE TABLET OF D'ZUN'KA</span>
+                                <span class="item-subname">ANCIENT KNOWLEDGE - UNKNOWN</span>
+                            </span>
                         </button>
                         <div class="item-details">
                             <p class="item-description">A relic of ancient Sandfury origin, sealed within a crypt below Zul’Farrak. Etched in fading Zandali and humming when touched by fel or void, it is rumored to house a mental safeguard—used to resist madness during communion with dark Loa.</p>
-                            <p class="item-obtained-from">Author unknown.</p>
+                            <p class="item-obtained-from"></p>
                         </div>
                     </div>
                 </div>
@@ -164,11 +186,14 @@
                     <div class="item-info">
                         <button class="item-toggle">
                             <img src="images/necro_book_01.png" alt="icon" class="item-icon">
-                            <span class="item-name">THE EBON LOOM</span>
+                            <span class="item-text">
+                                <span class="item-name">THE EBON LOOM</span>
+                                <span class="item-subname">ENCHANTING & TAILORING - UNKNOWN</span>
+                            </span>
                         </button>
                         <div class="item-details">
                             <p class="item-description">A chilling volume detailing the intersection of necromancy and weaving, theorizing how enchanted threads could be infused with death magic to create self-mending garments, spectral bindings, and burial shrouds that retain the memories of the dead. Scattered notes suggest its origins in forgotten Amani rituals, though some sections bear Scourge-style necromantic annotations.</p>
-                            <p class="item-obtained-from">Author unknown.</p>
+                            <p class="item-obtained-from"></p>
                         </div>
                     </div>
                 </div>
@@ -177,11 +202,14 @@
                     <div class="item-info">
                         <button class="item-toggle">
                             <img src="images/shadow_book_01.png" alt="icon" class="item-icon">
-                            <span class="item-name">THE UMBRAL LEXICON</span>
+                            <span class="item-text">
+                                <span class="item-name">THE UMBRAL LEXICON</span>
+                                <span class="item-subname">VOID-INFUSED SPELLCRAFT - UNKNOWN</span>
+                            </span>
                         </button>
                         <div class="item-details">
                             <p class="item-description">A cryptic volume bound in blackened leather, its pages seem to darken and blur in low light. The text, penned in shifting script, describes the nature of shadow as both a weapon and a veil. It details methods to merge shadow magic with traditional spellwork, including techniques for bending light, nullifying arcane resonance, and weaving illusions that bleed into reality.</p>
-                            <p class="item-obtained-from">Author unknown.</p>
+                            <p class="item-obtained-from"></p>
                         </div>
                     </div>
                 </div>
@@ -190,11 +218,14 @@
                     <div class="item-info">
                         <button class="item-toggle">
                             <img src="images/demon_book_02.png" alt="icon" class="item-icon">
-                            <span class="item-name">THE GRIMOIRE OF SILENT TONGUES</span>
+                            <span class="item-text">
+                                <span class="item-name">THE GRIMOIRE OF SILENT TONGUES</span>
+                                <span class="item-subname">DEMONOLOGY & INFERNAL CONTRACTS - UNKNOWN</span>
+                            </span>
                         </button>
                         <div class="item-details">
                             <p class="item-description">A forbidden manuscript chronicling the rituals used to subjugate greater demons. It describes the theory of layered bindings, where multiple sigils intertwine to create an inescapable prison, but warns of the arrogance that often leads summoners to believe their chains are unbreakable. Scorched pages and hastily scribbled warnings suggest its previous owner may have learned this lesson too late.</p>
-                            <p class="item-obtained-from">Author unknown.</p>
+                            <p class="item-obtained-from"></p>
                         </div>
                     </div>
                 </div>
@@ -203,11 +234,14 @@
                     <div class="item-info">
                         <button class="item-toggle">
                             <img src="images/mogu_book_01.png" alt="icon" class="item-icon">
-                            <span class="item-name">THE TOME OF OBSIDIAN LORDS</span>
+                            <span class="item-text">
+                                <span class="item-name">THE TOME OF OBSIDIAN LORDS</span>
+                                <span class="item-subname">ARCANE METALLURGY - UNKNOWN</span>
+                            </span>
                         </button>
                         <div class="item-details">
                             <p class="item-description">Bound in obsidian-black stone plates, this tome is surprisingly heavy, its cover etched with golden filigree resembling ancient mogu war sigils. The pages, made of an unk nown flexible stone-paper, are engraved with meticulously inscribed High Mogu script. The book is reputedly written by the last of the Obsidian Lords, a secretive sect of mogu who sought to perfect arcane enhancement techniques through metallurgy and gem stone manipulation. The pages contain deeply complex formulas, blueprints, and experimental notes—some unfinished—on how to imbue weapons, armor, and regalia with the durability of mountains and the terrifying resilience of mogu warlords.</p>
-                            <p class="item-obtained-from">Author unknown.</p>
+                            <p class="item-obtained-from"></p>
                         </div>
                     </div>
                 </div>
