--- a/index.html
+++ b/index.html
@@ -13,14 +13,17 @@
         <h1>THE VAULT OF ENDURIEL</h1>
         <nav>
             <ul>
-                <li><a href="index.html">HOME</a></li>
                 <li>
                     <a href="#">WORLD OF WARCRAFT RP</a>
                     <ul class="dropdown">
+                        <li><a href="characters.html">MY CHARACTERS</a></li>
                         <li><a href="custom-items.html">CUSTOM BOOKS</a></li>
                         <li><a href="guides.html">GUIDES</a></li>
                     </ul>
                 </li>
+                <li><a href="#">FANTASY PROJECTS</a></li>
+                <li><a href="#">MUSIC</a></li>
+                <li><a href="#">RESOURCES</a></li>
             </ul>
         </nav>
     </header>
