--- a/characters.html
+++ b/characters.html
@@ -43,6 +43,7 @@
                     <span class="flourish-line-right"></span>
                 </div>
             </div>
+            <p class="page-desc">work in progress</p>
             <div class="character-cards">
                 <div class="card">
                     <a href="#" class="card-link">
