--- a/custom-items.html
+++ b/custom-items.html
@@ -55,6 +55,13 @@
                 <button class="filter-btn" data-category="shadow">SHADOW & VOID</button>
                 <button class="filter-btn" data-category="arcane">ARCANE</button>
                 <button class="filter-btn" data-category="mogu">MOGU & PANDAREN</button>
+                <button class="filter-btn" data-category="tolvir">TOL'VIR</button>
+                <button class="filter-btn" data-category="arakkoa">ARAKKOA</button>
+                <button class="filter-btn" data-category="draenei">DRAENEI</button>
+                <button class="filter-btn" data-category="mantid">MANTID</button>
+                <button class="filter-btn" data-category="vrykul">VRYKUL</button>
+                <button class="filter-btn" data-category="highborne">HIGHBORNE</button>
+                <button class="filter-btn" data-category="titan">TITANIC</button>
                 <!-- Add more buttons for other categories as needed -->
             </div>
             <div class="note">
