--- a/custom-items.html
+++ b/custom-items.html
@@ -138,7 +138,21 @@
                         </div>
                     </div>
                 </div>
-
+                <div class="item-card" data-category="demonic">
+                    <div class="item-info">
+                        <button class="item-toggle">
+                            <img src="images/demon_book_03.png" alt="icon" class="item-icon">
+                            <span class="item-text">
+                                <span class="item-name">THE BINDING LEDGER</span>
+                                <span class="item-subname">DEMONOLOGY - ARYSSA BEL'ATHIL</span>
+                            </span>
+                        </button>
+                        <div class="item-details">
+                            <p class="item-description">A structured, meticulous volume penned by Aryssa Bel’Athil, compiling her firsthand observations of summoned demons, their behaviors, and the mechanics of binding. More ledger than lorebook, it forgoes dramatics in favor of precision, featuring diagrams, control sigils, and post-summoning annotations on each entity. Margins are filled with small corrections, refinements, and warnings—often in a clipped, personal shorthand. It is not a guide for beginners. It is a warlock’s journal of survival and refinement.</p>
+                            <p class="item-obtained-from"></p>
+                        </div>
+                    </div>
+                </div>
                 <div class="item-card" data-category="demonic">
                     <div class="item-info">
                         <button class="item-toggle">
